Fixed Navigation issues
1) Improved Slider direction
2) Navigation bar now scrolls to top when too far on bottom of screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -308,5 +308,13 @@
 .transparent-image-after {
 	transform: translateX(75px);
 }
+.transparent-image2 {
+	opacity: 0 !important;
+	transform: translateX(75px);
+}
+.transparent-image2-after {
+	transform: translateX(-75px);
+}
+
 
 
