--- a/css/style.css
+++ b/css/style.css
@@ -1245,6 +1245,14 @@ a {
 .transparent-image-after {
 	transform: translateX(75px);
 }
+.transparent-image2 {
+	opacity: 0 !important;
+	transform: translateX(75px);
+}
+.transparent-image2-after {
+	transform: translateX(-75px);
+}
+
 
 
 
